--- a/UD4_EX3/style.less
+++ b/UD4_EX3/style.less
@@ -1,4 +1,6 @@
 @mainColor : #EDEDE9;
+@contentColor : #D6CCC2;
+@elementsColor : #d5bdaf;
 @fontColor : #484d62;
 
 @font-face {
@@ -6,18 +8,62 @@
     src: url(font/Oswald-VariableFont_wght.ttf);
 }
 
+header {
+
+    @media screen and(max-width: 768px){
+        .button{
+            margin-left: 45%;
+            margin-bottom: 20px;
+        }       
+    }
+
+    background-color: @contentColor;  
+    margin-bottom: 100px;
+
+    .button{
+        background-color: @elementsColor;
+        border: 2px solid black;
+        margin-top: 54px;
+    }
+
+    .logoVertical{
+        max-width: 400px;
+        max-height: 300px;
+    }
+
+}
+
 body{
     background-color: @mainColor;
     color: @fontColor;
     font-family: Oswald !important;
+
+    a, a:hover, a:visited{
+        color: @fontColor;
+    }
+
+    @media screen and (max-width: 1200px) {
+        .topics {
+            margin-bottom: 20px;
+        }
+
+    }
+
+    .topics{
+        border: solid black 1px;
+        border-radius: 5px;
+        background-color: @contentColor;
+        text-align: center;
+    }
+
 }
 
 .article {
 
-    background-color: #D6CCC2;
+    background-color: @contentColor;
     border-radius: 6px;
     border: solid black 2px;
- 
+
     .articleImage{
         margin-top: 16px;
         max-width: 350px;
