--- a/UD4_EX4/style/style.css
+++ b/UD4_EX4/style/style.css
@@ -10,6 +10,12 @@ header {
     position: relative;
 }
 
+footer {
+    background-color: rgb(203, 203, 203);
+    text-align: center;
+    position: relative;
+}
+
 #bottom_header > ul {
     text-align: center;
 }
@@ -107,16 +113,14 @@ a > img {
 }
 
 #back-to-top {
-    background-color: teal;
+    /* position: fixed; */
+    /* right: 30px;
+    bottom: 30px; */
 }
 
 #product-listing {
     margin: 0;
-}
-
-footer {
-    background-color: rgb(203, 203, 203);
-    text-align: center;
+    margin-bottom: 30px;
 }
 
 footer > ul > li {
@@ -125,4 +129,6 @@ footer > ul > li {
 
 footer > ul {
     margin: 0;
+    padding: 0;
+    margin-top: 30px;
 }
