--- a/Project/adminPage/style/style.css
+++ b/Project/adminPage/style/style.css
@@ -5,24 +5,49 @@
 
 body {
     font-family: 'Oswald';
+    background-color: #EDEDE9;
 }
 
-#users > li{
+a.visited, a:hover, a {
+    text-decoration: none;
+    color: black;
+}
+
+header {
+    position: relative;
+}
+
+main {
+    position: relative;
+}
+
+header > button, #logOut {
+    width: 60px;
+    height: 20px;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+button {
+    background-color: burlywood;
+}
+
+#users-ul > li{
+    /* display: inline-block; */
     margin-bottom: 40px;
-    height: 170px;
+    height: 240px;
     width: 400px;
     border-radius: 5px;
+    background-color: bisque;
+    border: black solid 2px;
 }
 
-#users div, button {
+#users-ul div, button {
     margin-bottom: 10px;
     margin-left: 10px;
 }
 
-#users {
+#users-ul {
     list-style-type: none;
-}
-
-.infoUser{
-    background-color: bisque;
 }
